--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -2617,9 +2617,9 @@
     "remote_control_is_disabled_description": "Daljinski upravljač je onemogućen na vašem uređaju. Za pokretanje programa iz aplikacije ConnectLife omogućite daljinsko pokretanje na samom uređaju. Upute potražite u korisničkom priručniku.",
     "drying_stopping": "Zaustavljanje sušenja",
     "drying_in_x_stopping": "Sušenje u ## je u fazi zaustavljanja.",
-    "fridge_250_convert_desc": "Pretinac za zamrzavanje može se pretvoriti u zamrzivač ili pametnu zonu kako bi se zadovoljile potrebe skladištenja različite hrane. Kada je aktivirana funkcija \"Pretvori\",",
-    "fridge_213_convert_desc": "Proizvod se može pretvoriti u zamrzivač ili hladnjak kako bi zadovoljio zahtjeve za skladištenje različite hrane.\nKada se aktivira funkcija Convert, temperatura odjeljka može se postaviti između 2 ° C-8 ° C, Zadana temperatura hladnjaka je 4 ° C.",
-    "wine_notes_too_long": "note su preduge",
+    "fridge_250_convert_desc": "Odjeljak se može pretvoriti u zamrzivač ili pametnu zonu kako bi se ispunili zahtjevi za skladištenje različite hrane.\nKada je funkcija pretvaranja aktivirana, temperatura hladnjaka može se postaviti između 2℃-8℃, a temperatura zamrzivača može se postaviti između -5℃-3℃. Zadana temperatura hladnjaka je 4℃, a zadana temperatura zamrzivača je 0℃.",
+    "fridge_213_convert_desc": "Proizvod se može pretvoriti u zamrzivač ili hladnjak kako bi zadovoljio zahtjeve za skladištenje različite hrane.\nKada se aktivira funkcija Convert, temperatura odjeljka može se postaviti između 2°C-8°C, Zadana temperatura hladnjaka je 4°C.",
+    "wine_notes_too_long": "bilješke su preduge",
     "wine_cabinet_zone": "Zona vinskog ormara",
     "change_wifi_program": "Promjena Wi-Fi programa",
     "change_wifi_program_desc": "Spremate se promijeniti postojeći program xxxx na svom uređaju pod Wi-Fi pozicijom s novim programom xxx.",
@@ -2628,18 +2628,18 @@
     "change_wifi_program_tips": "Odaberite program koji želite na svom uređaju ispod pozicije WI-Fi programa.",
     "adding_program_to_the_device": "Dodavanje programa na uređaj.",
     "adding_program_to_the_device_tips": "To može potrajati i do 30 sekundi. Sve ostale funkcije na uređaju su onemogućene.",
-    "january_all": "Sij",
-    "february_all": "Velj",
-    "march_all": "Ožu",
-    "april_all": "Tra",
-    "may_all": "Svib",
-    "jun_all": "Lip",
-    "july_all": "Srp",
-    "august_all": "Kol",
-    "september_all": "Ruj",
-    "october_all": "List",
-    "november_all": "Stu",
-    "december_all": "Pro",
+    "january_all": "Siječanj",
+    "february_all": "Veljača",
+    "march_all": "Ožujak",
+    "april_all": "Travanj",
+    "may_all": "Svibanj",
+    "jun_all": "Lipanj",
+    "july_all": "Srpanj",
+    "august_all": "Kolovoz",
+    "september_all": "Rujan",
+    "october_all": "Listopad",
+    "november_all": "Studeni",
+    "december_all": "Prosinac",
     "refreshing_program_list": "Osvježavanje popisa programa.",
     "refreshing_program_list_tips": "Popis programa trenutno osvježava. U međuvremenu je onemogućeno korištenje uređaja.",
     "pind_config_wifi_new_step1": "Dodirnite i držite tipku \"on/off\" 5 sekundi dok se ne pojavi simbol Wi-Fi mreže.",
@@ -2673,9 +2673,9 @@
     "program_name_new_clothes": "Nova odjeća",
     "program_name_dark_clothes": "Tamna odjeća",
     "program_name_stain_fruits": "Plodovi mrlja",
-    "program_name_stain_blood": "Mrlja krvi",
-    "program_name_stain_wine": "Vino od mrlja",
-    "program_name_stain_coffee": "Mrlja kava",
+    "program_name_stain_blood": "Mrlje krvi",
+    "program_name_stain_wine": "Mrlje od vina",
+    "program_name_stain_coffee": "Mrlje od kave",
     "program_name_swimwear": "Kupaći kostimi",
     "program_name_waterproof": "Nepromočiv",
     "program_name_lingerie": "Donje rublje",
@@ -2688,7 +2688,7 @@
     "zone_open_tip": "Prvo otvorite ovu zonu.",
     "end_f_d": "Kraj",
     "no_more_c": "Nema više podržanih znakova",
-    "no_timer": "Nema mjerača vremena",
+    "no_timer": "Bez timera",
     "q_t_des": "Brzo zakazivanje",
     "q_t_title": "Brzo zakazivanje",
     "ac_will_s": "AC će početi od",
@@ -2750,12 +2750,12 @@
     "storage_mode_on_demand": "Način pohrane na zahtjev",
     "ac_runtime": "Runtime",
     "presence_screen_f_d": "Zaslon stanja",
-    "tri_climate_type_energy_saving": "Energija\nUšteda",
+    "tri_climate_type_energy_saving": "Ušteda\nEnergije",
     "tri_climate_type_energy_comfort": "Udobnost",
     "tri_zone_key": "Zona",
     "door_opening": "Otvaranje vrata",
     "add_a_scheduling_key": "Dodavanje zakazivanja",
-    "stop_holiday_key": "Zaustavite odmor",
+    "stop_holiday_key": "Stop holiday",
     "zone1_must_higher_key": "Temperatura zone 1 mora biti viša od zone 2",
     "zone2_must_lower_key": "Temperatura zone 2 ne može biti viša od zone 1",
     "timer_start_end_cannot_same": "Vrijeme početka i \"Vrijeme završetka\" ne mogu biti isti",
@@ -2775,7 +2775,7 @@
     "asko_offline_content_th": "Provjerite snagu signala WiFi-ja. Ako je signal slab, moguće je da je usmjerivač predaleko od ormara.",
     "hide_clock_on_display": "Sakrijte sat na zaslonu.",
     "ac_fresh_air": "Svježi zrak",
-    "ac_fresh_air_des": "Uvodi svježi zrak u prostoriju slojevitim pročišćavanjem, čineći ljude punim vitalnosti.",
+    "ac_fresh_air_des": "Uvodi svježi zrak u prostoriju slojevitim pročišćavanjem, čineći vas punim vitalnosti.",
     "ac_both_sides": "Obje strane",
     "ac_swing_right": "Desno",
     "fridge_fan_failure": "Ventilator xxxxx",
@@ -2812,12 +2812,12 @@
     "asko_wine_remote_content": "Da biste promijenili postavke putem aplikacije, daljinski upravljač mora biti omogućen na vašem ormariću.",
     "asko_wine_remote_button": "Kako omogućiti?",
     "asko_wine_remote_sheet_content": "Daljinski upravljač je onemogućen na vašem vinskom ormariću. Slijedite korake da biste ga omogućili:",
-    "asko_wine_sabbath_title": "Sabatni način je uključen",
-    "asko_wine_sabbath_content": "Kada je način rada sa šabatom aktivan, upravljačka ploča, svjetla i alarmi su isključeni. Uređaj zadržava postavke temperature.",
+    "asko_wine_sabbath_title": "Sabbath Mode je uključen",
+    "asko_wine_sabbath_content": "Kada je Sabbath Mode aktivan, upravljačka ploča, svjetla i alarmi su isključeni. Uređaj zadržava postavke temperature.",
     "no_set": "Nije postavljeno",
     "delay": "Odgoditi",
-    "asko_wine_sabbath_deactivate": "Deaktiviraj način šabata",
-    "asko_wine_sabbath_deactivate_c": "Sabbath način rada aktiviran je na vašem vinskom ormariću. Slijedite korake da biste ga deaktivirali:",
+    "asko_wine_sabbath_deactivate": "Deaktiviraj Sabbath Mode",
+    "asko_wine_sabbath_deactivate_c": "Sabbath način rada aktiviran je na vašem vinskom hladnjaku. Slijedite korake da biste ga deaktivirali:",
     "asko_wine_sabbath_deactivate_tip": "Pritisnite i držite tipku <b>Lock 00_11_22</b> na ormariću za vino <b>3 sekunde</b>.",
     "asko_wine_sabbath_deactivate_tip_1": "Da biste u potpunosti onemogućili subotnji način rada, isključite gumb za uključivanje/isključivanje u izborniku postavki.",
     "to_settings": "U postavke",
@@ -2882,7 +2882,7 @@
     "air_care_suitable": "Prikladan",
     "energy_consumption": "Potrošnja energije",
     "what_would_you_like_to_do": "Što biste željeli učiniti?",
-    "wash": "PRATI",
+    "wash": "PRANJE",
     "wm_wizard_title_step1": "Koju vrstu rublja želite oprati?",
     "wm_wizard_title_step2": "Koje je boje tvoje rublje?",
     "wm_wizard_title_step3": "Koliko ti je prljavo rublje?",
@@ -2891,7 +2891,7 @@
     "minutes": "minuta",
     "send_to_device": "Pošalji na uređaj",
     "save_to_favorites": "Spremi u favorite",
-    "run_time_total": "Ukupno Vrijeme Izvođenja",
+    "run_time_total": "Ukupno vrijeme Izvođenja",
     "washing_in_x_stopping": "Pranje u ## je u fazi zaustavljanja.",
     "washing_stopping": "Zaustavljanje pranja",
     "wash_finished_other": "Pranje završeno",
@@ -3001,7 +3001,7 @@
     "add_floor": "Dodati pod?",
     "add_floor_tip_key": "Trenutni uređaji bit će postavljeni na 1. katu. Možete ih premjestiti kasnije.",
     "select_rooms_in_your_home_key": "Odaberite sobe u svom domu",
-    "how_many_rooms_in_this_floor_key": "Koliko soba ima na ovom katu?",
+    "how_many_rooms_in_this_floor_key": "Koliko soba ima na ovome katu?",
     "drag_and_drop_rooms": "Povlačenje i ispuštanje soba...",
     "manage_3d_room_tip": "Pritisnite i povucite sobe u desni položaj",
     "room_type_key": "vrsta sobe",
@@ -3172,7 +3172,7 @@
     "sabbath_content": "Uređaj će nastaviti raditi, dok će dodatne funkcije poput svjetla, zaslona, senzora blizine i senzora vrata biti tjedno onemogućene na 72 sata.",
     "sabbath_content_sub": "Kako biste onemogućili način Sabbath, pritisnite tipku za zaključavanje na zaslonu uređaja 3 sekunde.",
     "humidity_measurement": "Mjerenje vlažnosti",
-    "humidity_measurement_content": "Vrijednosti vlažnosti se mogu pratiti. Alarmi će se oglasiti ako je vlažnost izvan raspona 40%-80%.",
+    "humidity_measurement_content": "Vrijednosti vlažnosti možete pratiti. Alarmi će se oglasiti ako je vlažnost izvan raspona 40%-80%.",
     "charcoal_filters": "Filtri s drvećem ugljem",
     "charcoal_filters_content": "Kada se ugljeni filetri zamijene, odbrojavanje se mora RESETIRATI kako bi se pokazalo životni vijek novih filtara.",
     "filter_notification": "Obavijest o filteru",
@@ -3214,7 +3214,7 @@
     "climate_control": "Kontrola klime",
     "rooms_multi_key": "sobe",
     "devices_multi_key": "uređaji",
-    "easy_view": "Jednostavan pogled",
+    "easy_view": "Jednostavan pregled",
     "easy_view_tips": "Kada se aktivira, tekst na zaslonu na vašem uređaju bit će veći i lakši za čitanje.",
     "display_logotype": "Prikaz logotipa",
     "display_logotype_tips": "Kada se aktivira, Asko logo će biti prikazan prilikom pokretanja uređaja.",
@@ -3385,7 +3385,7 @@
     "fabric_temperature": "Tkanina i temperatura",
     "high_water_level": "Visok vodostaj",
     "small_load": "Mala količina rublja",
-    "small_load_tips": "Koristite ovu značajku kada perete malo rublja (maksimalno 2,5 kg). To će skratiti trajanje programa i uštedjeti energiju.",
+    "small_load_tips": "Koristite ovu funkciju kada perete malo rublja (maksimalno 2,5 kg). To će skratiti trajanje programa i uštedjeti energiju.",
     "himit2": "Hi-Mit II",
     "himit2_setup1": "Provjerite je li Himit adapter uključen, pritisnite i držite tipku za resetiranje 3 sekunde dok WLAN lampica ne počne treptati.",
     "himit2_setup2": "Hi-Mit II spojen je na mrežni kabel.",
@@ -3400,7 +3400,7 @@
     "dw_offline_content2": "Vaš Wi-Fi je omogućen i povezan.",
     "dw_offline_content3": "Ako ste nedavno promijenili lozinku, provjerite lozinku za Wi-Fi.",
     "security_upgrade2": "SIGURNOSNA NADOGRADNJA",
-    "security_upgrade2_content": "Nadogradili smo sigurnosne sustave i omogućili jedinstvenu prijavu za sve naše platforme. Radnja je napravljena kako bismo poboljšali zaštitu naših digitalnih platformi i omogućili vam nesmetano kretanje između naših brendova. Kao dio sigurnosne nadogradnje, molimo vas da poništite zaporku svog računa od 15. srpnja 2023. Ako ste već poništili zaporku, nisu potrebne nove radnje. Ako nemate račun, morate se prvo registrirati. Hvala.",
+    "security_upgrade2_content": "Nadogradili smo sigurnosne sustave i omogućili jedinstvenu prijavu za sve naše platforme, kako bismo poboljšali zaštitu naših digitalnih platformi i omogućili vam nesmetano kretanje između naših brendova. Kao dio sigurnosne nadogradnje, molimo vas da poništite zaporku svog računa od 15. srpnja 2023. Ako ste već poništili zaporku, nisu potrebne nove radnje. Ako nemate račun, morate se prvo registrirati. Hvala.",
     "article_number_not_valid": "Broj artikla nije valjan",
     "auto_super_rinse": "Automatsko super ispiranje",
     "auto_super_rinse_desc": "Ova funkcija pomaže osigurati da se odjeća temeljito očisti, bez ostavljanja ostataka deterdženta ili prljavštine.",
@@ -4217,5 +4217,16 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Zvukovi obavijesti",
     "CL_DV_OV_24_navigation_sounds": "Zvukovi navigacije",
-    "CL_DV_OV_24_on_during_use": "Uključen tijekom uporabe"
+    "CL_DV_OV_24_on_during_use": "Uključen tijekom uporabe",
+    "tips_key": "Savjeti",
+    "CL_DV_OV_stage_cooking_desc": "Višefazno kuhanje omogućuje vam kombiniranje više sustava grijača u jednom procesu kuhanja. Odaberite različite funkcije i postavke kako biste sastavili proces kuhanja prema svojim željama.",
+    "CL_DV_OV_remote_start_tips": "Ako uključite Remote Start, možete ne samo poslati, već i pokrenuti program s udaljenosti.",
+    "CL_DV_OV_how_to_do_this": "Kako to učiniti?",
+    "CL_DV_OV_add_stage": "Dodajte pozornicu",
+    "CL_DV_OV_stage": "Pozornica",
+    "CL_DV_HOB_sensitivity_level": "Razina osjetljivosti automatske nape",
+    "CL_DV_HOB_hood_title": "napa",
+    "CL_DV_RF_food_inventory": "Popis hrane",
+    "p_check_email": "Provjerite svoju e-poštu",
+    "CL_DV_RF_storage_appliance": "Uređaj za pohranu"
 }
