--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -3037,15 +3037,15 @@
     "no_network_tips": "Impossibile recuperare le informazioni. per favore controlla la tua connessione Internet e prova di nuovo",
     "select_device": "Seleziona dispositivo",
     "unsupported_report_issue_tips": "Siamo spiacenti, ma la segnalazione di un problema per questo dispositivo non è al momento disponibile. Il nostro team sta lavorando per fornire presto supporto per questo dispositivo. Nel frattempo, non esitare a <u>contattarci</u> per ricevere assistenza.",
-    "unsupported_report_issue_tips_2": "Per problemi relativi all'apparecchio, contatta il nostro supporto post-vendita tramite il link <u>contattaci</u>.",
-    "troubleshooting_tips": "Prova a trovare la soluzione tramite la risoluzione dei problemi prima di segnalare un problema.",
+    "unsupported_report_issue_tips_2": "Per problemi relativi all'apparecchio, contatta il nostro supporto tramite il link <u>contattaci</u>.",
+    "troubleshooting_tips": "Prima di segnalare un problema, cercate di trovare la soluzione attraverso la risoluzione dei problemi.",
     "go_to_troubleshooting": "Vai alla risoluzione dei problemi",
     "tell_us_more_about_your_device": "Raccontaci di più sul tuo dispositivo",
     "choose_device_by_auid_or_sn": "Scegli il dispositivo tramite AUID o SN",
     "manually_enter_the_data": "Inserisci manualmente i dati",
     "article_number": "Numero dell'articolo",
     "serial_number": "Numero di serie",
-    "auid_sn_input_title": "N. AUID/SN",
+    "auid_sn_input_title": "N. AUID /SN",
     "subject_of_the_issue": "Oggetto della questione",
     "describe_issue_more_tips": "Puoi descrivere il problema in modo più dettagliato?",
     "description_issue_hint": "Descrizione del problema…",
@@ -3087,10 +3087,10 @@
     "passed": "passato",
     "scan_again": "scansiona di nuovo",
     "last_scanned": "Ultima scansione",
-    "energy_used": "Energia consumata",
-    "dw_statistics_desc": "Questi dati statistici si basano su statistiche di rete, e parte dei dati si basa su condizioni di laboratorio misurate, solo per riferimento degli utenti.",
+    "energy_used": "Energia utilizzata",
+    "dw_statistics_desc": "Questi dati statistici si basano su statistiche di rete e una parte dei dati si basa su condizioni di laboratorio misurate, solo a titolo di riferimento per l'utente.",
     "total_cycles": "Cicli totali",
-    "dw_error_f56": "Guasto alla circolazione.",
+    "dw_error_f56": "Guasto di circolazione.",
     "washer_dishes_stop": "Lavaggio stoviglie interrotto",
     "washer_stopped": "Il lavaggio in ## è stato interrotto.",
     "dw_dish_clean": "I tuoi piatti sono puliti",
@@ -3107,30 +3107,30 @@
     "time_long_short": "Tempo: Lungo - Corto",
     "time_short_long": "Tempo: Corto - Lungo",
     "starts_key": "Inizia",
-    "ends_key": "Fini",
-    "delete_floor_key": "Eliminare il pavimento?",
+    "ends_key": "Fine",
+    "delete_floor_key": "Eliminare il piano?",
     "temperature_guide_content": "Le giuste temperature per conservare, servire e invecchiare i vini possono variare a seconda del tipo di vino e delle preferenze personali. Ecco alcune linee guida generali sulla temperatura.",
     "light_white": "chiaro\nbianco",
     "medium_white": "Medio\nbianco",
     "full_white": "completamente\nbianco",
-    "light_red": "luce\nrossa",
+    "light_red": "chiaro\nrosso",
     "medium_red": "medio\nrosso",
     "full_red": "pieno\nrosso",
     "sparkling_left": "Cava\nChampagne\nChampagne d'annata\nAsti Spumante\nProsecco",
     "lightWhite_left": "Albarino\nAmeis\nSauvignon Blanc\nFalanghina\nGavi Di Gavi\nGruner Veltliner\nPicpoul De Pinet",
     "mediumWhite_left": "Assyrtiko\nBacco\nCatarratto\nFiano\nInzolia\nGodello\nGarganega\nGreco Di Tufo\nGewürtztraminer",
-    "fullWhite_left": "Furmint\nGrenache bianco\nOrtega\nMacabeo\nPouilly-Fuissé\nPalomino\nPedro Ximenez\nRoussanne",
-    "dessert_left": "Vino ghiacciato\nMoscato\nSauternes",
+    "fullWhite_left": "Furmint\nGrenache Blanc\nOrtega\nMacabeo\nPouilly-Fuissé\nPalomino\nPedro Ximenez\nRoussanne",
+    "dessert_left": "Vino di ghiaccio\nMoscato\nSauternes",
     "rose_left": "Côtes De Provence\nPinot Grigio Rosé\nRioja Rosado\nSancerre Rosé\nZinfandel bianco",
     "lightRed_left": "Beaujolais\nBeaune\nPinot Nero\nValpolicella\nBarbera\nBonardo",
     "mediumRed_left": "Barolo\nBorgogna\nCôtes Du Rhône\nChianti\nMerlot\nNerello Mascalese",
     "fullRed_left": "Bordeaux\nCabernet\nSauvignon\nGrenache\nMalbec\nRioja\nSyrah\nShiraz\nAglianico\nCarmenere",
-    "lightWhite_right": "San Bris\nVerdicchio\nFrascati\nPinot Grigio\nPSanto. Bris\nVerdicchio\nFrascati\nPinot Grigio\nPouilly-Fumé\nSancerre\nCorteseouilly-Fumé\nSancerre\nCortese",
-    "mediumWhite_right": "Orvieto\nChenin Blanc\nColombard\nPinot Blanco\nReisling\nSoave\nVerdejo\nViognier",
-    "fullWhite_right": "Torrontes\nTrebbiano\nVermentino\nBorgogna\nChablis\nChardonnay\nMersault\nSémillon",
-    "lightRed_right": "Frapatto\nGamay\nMontepulciano\nNero D'Avola\nPinot Meunier",
-    "mediumRed_right": "Vino ghiacciato\nMoscato\nSauternes",
-    "fullRed_right": "Garignan\nGraciano\nMourvedre\nNegroamaro\nPetit Verdot\nTannat\nTempranillo\nTouriga National\nZinfandel",
+    "lightWhite_right": "San Bris\nVerdicchio\nFrascati\nPinot grigio\nPouilly-Fumé\nSancerre\nCortese",
+    "mediumWhite_right": "Orvieto\nChenin Blanc\nColombard\nPinot bianco\nReisling\nSoave\nVerdejo\nViognier",
+    "fullWhite_right": "Torronte\nTrebbiano\nVermentino\nBorgogna\nChablis\nChardonnay\nMersault\nSémillon",
+    "lightRed_right": "Frapatto\nGamay\nMontepulciano\nNero d'Avola\nPinot Meunier",
+    "mediumRed_right": "Sangiovese\nBrunello\nCorvina\nDolcetto\nNebbiolo",
+    "fullRed_right": "Garignano\nGraciano\nMourvedre\nNegroamaro\nPetit Verdot\nTannat\nTempranillo\nTouriga Nacional\nZinfandel",
     "lightWhite_title": "Vino bianco leggero",
     "mediumWhite_title": "Bianco di medio corpo",
     "fullWhite_title": "Bianco Corposo",
@@ -4217,5 +4217,16 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Suoni di notifica",
     "CL_DV_OV_24_navigation_sounds": "Suoni di navigazione",
-    "CL_DV_OV_24_on_during_use": "Acceso durante l'uso"
+    "CL_DV_OV_24_on_during_use": "Acceso durante l'uso",
+    "tips_key": "Suggerimenti",
+    "CL_DV_OV_stage_cooking_desc": "La cottura multifase consente di combinare più sistemi di riscaldamento in un unico processo di cottura. Seleziona diverse funzioni e impostazioni per comporre il processo di cottura di tua preferenza.",
+    "CL_DV_OV_remote_start_tips": "Se attivi l'avvio remoto, puoi non solo inviare ma anche avviare il programma a distanza.",
+    "CL_DV_OV_how_to_do_this": "Come fare?",
+    "CL_DV_OV_add_stage": "Aggiungi fase",
+    "CL_DV_OV_stage": "Palcoscenico",
+    "CL_DV_HOB_sensitivity_level": "Livello di sensibilità del cofano automatico",
+    "CL_DV_HOB_hood_title": "cappuccio",
+    "CL_DV_RF_food_inventory": "Inventario alimentare",
+    "p_check_email": "Per favore controlla la tua email",
+    "CL_DV_RF_storage_appliance": "Dispositivo di archiviazione"
 }
