--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4217,5 +4217,16 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Хабарландыру дыбыстары",
     "CL_DV_OV_24_navigation_sounds": "Навигация дыбыстары",
-    "CL_DV_OV_24_on_during_use": "Қолдану кезінде қосулы"
+    "CL_DV_OV_24_on_during_use": "Қолдану кезінде қосулы",
+    "tips_key": "Кеңестер",
+    "CL_DV_OV_stage_cooking_desc": "Көп сатылы пісіру бір пісіру процесінде бірнеше қыздыру жүйелерін біріктіруге мүмкіндік береді. Өз қалауыңыз бойынша пісіру процесін құрастыру үшін әртүрлі функциялар мен параметрлерді таңдаңыз.",
+    "CL_DV_OV_remote_start_tips": "Қашықтан бастау функциясын қоссаңыз, жіберуді ғана емес, бағдарламаны қашықтан бастауға да болады.",
+    "CL_DV_OV_how_to_do_this": "Мұны қалай жасауға болады?",
+    "CL_DV_OV_add_stage": "Кезеңді қосыңыз",
+    "CL_DV_OV_stage": "Сахна",
+    "CL_DV_HOB_sensitivity_level": "Автоматты сорғыштың сезімталдық деңгейі",
+    "CL_DV_HOB_hood_title": "капюшон",
+    "CL_DV_RF_food_inventory": "Азық-түлік түгендеу",
+    "p_check_email": "Электрондық поштаңызды тексеріңіз",
+    "CL_DV_RF_storage_appliance": "Сақтау құрылғысы"
 }
