--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4217,5 +4217,16 @@
     "CL_CF_RM_asko_pro_floor": "АСКО Про",
     "CL_DV_OV_24_notification_sounds": "Звуки уведомлений",
     "CL_DV_OV_24_navigation_sounds": "Звуки навигации",
-    "CL_DV_OV_24_on_during_use": "Включено во время использования"
+    "CL_DV_OV_24_on_during_use": "Включено во время использования",
+    "tips_key": "Советы",
+    "CL_DV_OV_stage_cooking_desc": "Многофазное приготовление пищи позволяет объединить несколько систем нагрева в одном процессе приготовления. Выбирайте различные функции и настройки, чтобы составить процесс приготовления по вашему вкусу.",
+    "CL_DV_OV_remote_start_tips": "Если включить функцию «Удаленный запуск», то можно не только отправлять, но и запускать программу на расстоянии.",
+    "CL_DV_OV_how_to_do_this": "Как это сделать?",
+    "CL_DV_OV_add_stage": "Добавить этап",
+    "CL_DV_OV_stage": "Этап",
+    "CL_DV_HOB_sensitivity_level": "Уровень чувствительности автоматического капота",
+    "CL_DV_HOB_hood_title": "капюшон",
+    "CL_DV_RF_food_inventory": "Инвентаризация продуктов питания",
+    "p_check_email": "Пожалуйста, проверьте свою электронную почту.",
+    "CL_DV_RF_storage_appliance": "Устройство для хранения"
 }
