--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4217,5 +4217,16 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Звуки сповіщень",
     "CL_DV_OV_24_navigation_sounds": "Звуки навігації",
-    "CL_DV_OV_24_on_during_use": "Увімкнено під час використання"
+    "CL_DV_OV_24_on_during_use": "Увімкнено під час використання",
+    "tips_key": "Поради",
+    "CL_DV_OV_stage_cooking_desc": "Багатофазне варіння дозволяє об'єднати кілька систем нагріву в одному процесі приготування. Виберіть різні функції та налаштування, щоб скласти процес приготування за вашим бажанням.",
+    "CL_DV_OV_remote_start_tips": "Якщо увімкнути віддалений запуск, то можна не тільки відправити, але й запустити програму на відстані.",
+    "CL_DV_OV_how_to_do_this": "Як це зробити?",
+    "CL_DV_OV_add_stage": "Додати етап",
+    "CL_DV_OV_stage": "етап",
+    "CL_DV_HOB_sensitivity_level": "Рівень чутливості автоматичної капота",
+    "CL_DV_HOB_hood_title": "капот",
+    "CL_DV_RF_food_inventory": "Інвентар харчування",
+    "p_check_email": "Будь ласка, перевірте свою електронну пошту",
+    "CL_DV_RF_storage_appliance": "Прилад зберігання"
 }
