--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -4217,5 +4217,16 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Benachrichtigungstöne",
     "CL_DV_OV_24_navigation_sounds": "Navigationsgeräusche",
-    "CL_DV_OV_24_on_during_use": "Ein während der Benutzung"
+    "CL_DV_OV_24_on_during_use": "Ein während der Benutzung",
+    "tips_key": "Tipps",
+    "CL_DV_OV_stage_cooking_desc": "Beim mehrstufigen Kochen können Sie mehrere Heizsysteme in einem Kochvorgang kombinieren. Wählen Sie verschiedene Funktionen und Einstellungen, um den Kochvorgang nach Ihren Wünschen zusammenzustellen.",
+    "CL_DV_OV_remote_start_tips": "Wenn Sie den Remote Start einschalten, können Sie das Programm nicht nur senden, sondern auch aus der Ferne starten.",
+    "CL_DV_OV_how_to_do_this": "Wie macht man das?",
+    "CL_DV_OV_add_stage": "Phase hinzufügen",
+    "CL_DV_OV_stage": "Bühne",
+    "CL_DV_HOB_sensitivity_level": "Empfindlichkeitsstufe der automatischen Haube",
+    "CL_DV_HOB_hood_title": "Haube",
+    "CL_DV_RF_food_inventory": "Lebensmittelinventar",
+    "p_check_email": "Bitte überprüfen Sie Ihre E-Mail",
+    "CL_DV_RF_storage_appliance": "Speichergerät"
 }
