--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4217,5 +4217,16 @@
     "CL_CF_RM_asko_pro_floor": "АСКО Про",
     "CL_DV_OV_24_notification_sounds": "Звуци за известување",
     "CL_DV_OV_24_navigation_sounds": "Звуци за навигација",
-    "CL_DV_OV_24_on_during_use": "Вклучено за време на употребата"
+    "CL_DV_OV_24_on_during_use": "Вклучено за време на употребата",
+    "tips_key": "Совети",
+    "CL_DV_OV_stage_cooking_desc": "Повеќефазното готвење ви овозможува да комбинирате повеќе системи за грејачи во еден процес на готвење. Изберете различни функции и поставки за да го составите процесот на готвење по ваша желба.",
+    "CL_DV_OV_remote_start_tips": "Ако вклучите далечински старт, не само што можете да ја испратите, туку и да ја стартувате програмата од далечина.",
+    "CL_DV_OV_how_to_do_this": "Како да го направите ова?",
+    "CL_DV_OV_add_stage": "Додадете фаза",
+    "CL_DV_OV_stage": "Фаза",
+    "CL_DV_HOB_sensitivity_level": "Ниво на чувствителност на автоматската хауба",
+    "CL_DV_HOB_hood_title": "хауба",
+    "CL_DV_RF_food_inventory": "Инвентар на храна",
+    "p_check_email": "Ве молиме проверете ја вашата е-пошта",
+    "CL_DV_RF_storage_appliance": "Апарат за складирање"
 }
