--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -4217,5 +4217,16 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Bunyi pemberitahuan",
     "CL_DV_OV_24_navigation_sounds": "Bunyi navigasi",
-    "CL_DV_OV_24_on_during_use": "Hidup semasa digunakan"
+    "CL_DV_OV_24_on_during_use": "Hidup semasa digunakan",
+    "tips_key": "Petua",
+    "CL_DV_OV_stage_cooking_desc": "Memasak peringkat berbilang fasa membolehkan anda menggabungkan berbilang sistem pemanas dalam satu proses memasak. Pilih fungsi dan tetapan yang berbeza untuk menyusun proses memasak pilihan anda.",
+    "CL_DV_OV_remote_start_tips": "Jika anda menghidupkan Mula Jauh, anda bukan sahaja boleh menghantar tetapi juga memulakan program dari jauh.",
+    "CL_DV_OV_how_to_do_this": "Bagaimana untuk melakukan ini?",
+    "CL_DV_OV_add_stage": "Tambah pentas",
+    "CL_DV_OV_stage": "pentas",
+    "CL_DV_HOB_sensitivity_level": "Tahap sensitiviti hud auto",
+    "CL_DV_HOB_hood_title": "tudung",
+    "CL_DV_RF_food_inventory": "Inventori Makanan",
+    "p_check_email": "Sila semak e-mel anda",
+    "CL_DV_RF_storage_appliance": "Perkakas Penyimpanan"
 }
