--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -4217,5 +4217,16 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Varslingslyder",
     "CL_DV_OV_24_navigation_sounds": "Navigasjonslyder",
-    "CL_DV_OV_24_on_during_use": "På under bruk"
+    "CL_DV_OV_24_on_during_use": "På under bruk",
+    "tips_key": "Tips",
+    "CL_DV_OV_stage_cooking_desc": "Flerfasetrinns matlaging lar deg kombinere flere varmesystemer i en tilberedningsprosess. Velg forskjellige funksjoner og innstillinger for å komponere tilberedningsprosessen etter dine preferanser.",
+    "CL_DV_OV_remote_start_tips": "Hvis du slår på Remote Start, kan du ikke bare sende, men også starte programmet på avstand.",
+    "CL_DV_OV_how_to_do_this": "Hvordan gjøre dette?",
+    "CL_DV_OV_add_stage": "Legg til scene",
+    "CL_DV_OV_stage": "Scene",
+    "CL_DV_HOB_sensitivity_level": "Automatisk panserfølsomhetsnivå",
+    "CL_DV_HOB_hood_title": "hette",
+    "CL_DV_RF_food_inventory": "Matvarelager",
+    "p_check_email": "Vennligst sjekk e-posten din",
+    "CL_DV_RF_storage_appliance": "Oppbevaringsapparat"
 }
